--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,13 @@
     "description": "Laravel 11.x Front-end preset for argon",
     "license": "MIT",
     "homepage": "https://github.com/creativetimofficial/argon-dashboard-laravel",
-    "keywords": ["Laravel", "Preset", "Argon"],
+    "keywords": [
+        "Laravel",
+        "Preset",
+        "Argon"
+    ],
     "require": {
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^11.0|^12.0",
         "laravel/legacy-factories": "^1.0"
     },
     "autoload": {
